--- a/bower.json
+++ b/bower.json
@@ -6,8 +6,10 @@
   "license": "Accenture Software License v1 2008",
   "private": true,
   "dependencies": {
+	"jquery": "~2.1.4",
     "angular": "~1.4.0",
-    "angular-route": "~1.4.0",
-    "angular-mocks": "~1.4.0"
+    "bootstrap": "~3.2.0",
+    "angular-animate": "~1.4.0",
+    "angular-route": "~1.4.0"
   }
 }
