--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "bower": "^1.3.1",
     "connect-livereload": "^0.5.3",
     "grunt": "^0.4.5",
+	"grunt-contrib-concat":"^0.5.1",
+	"grunt-contrib-cssmin":"^0.12.3",
     "grunt-contrib-concat": "^0.5.1",
+	"grunt-contrib-htmlmin":"^0.4.0",
+	"grunt-contrib-imagemin":"^0.4.0",
+	"grunt-contrib-copy":"^0.8.0",
     "grunt-contrib-connect": "^0.10.1",
     "grunt-contrib-jshint": "^0.11.2",
     "grunt-contrib-uglify": "^0.9.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-ng-annotate": "^0.10.0",
+	"grunt-svgmin":"^2.0.1",
     "grunt-open": "^0.2.3",
     "grunt-rename": "^0.1.4",
     "http-server": "^0.6.1",
