--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	"grunt-contrib-htmlmin":"^0.4.0",
 	"grunt-contrib-imagemin":"^0.4.0",
 	"grunt-contrib-copy":"^0.8.0",
+	"grunt-contrib-clean":"^0.4.0",
     "grunt-contrib-connect": "^0.10.1",
     "grunt-contrib-jshint": "^0.11.2",
     "grunt-contrib-uglify": "^0.9.1",
