--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 	"grunt-svgmin":"^2.0.1",
     "grunt-open": "^0.2.3",
     "grunt-rename": "^0.1.4",
+	"grunt-karma":"^0.11.2",
     "http-server": "^0.6.1",
     "jasmine-core": "^2.3.4",
     "karma": "~0.12",
